// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Pane should render Default properly 1`] = `
<GenericRightPaneComponent
  container={
    Explorer {
      "_closeModalDialog": [Function],
      "_closeSynapseLinkModalDialog": [Function],
      "_isAfecFeatureRegistered": [Function],
      "_isInitializingNotebooks": false,
      "_panes": Array [
        AddDatabasePane {
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "databaseCreateNewShared": [Function],
          "databaseId": [Function],
          "databaseIdLabel": [Function],
          "databaseIdPlaceHolder": [Function],
          "databaseIdTooltipText": [Function],
          "databaseLevelThroughputTooltipText": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "freeTierExceedThroughputTooltip": [Function],
          "id": "adddatabasepane",
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFreeTierAccount": [Function],
          "isTemplateReady": [Function],
          "maxAutoPilotThroughputSet": [Function],
          "maxThroughputRU": [Function],
          "maxThroughputRUText": [Function],
          "minThroughputRU": [Function],
          "onMoreDetailsKeyPress": [Function],
          "requestUnitsUsageCost": [Function],
          "ruToolTipText": [Function],
          "showUpsellMessage": [Function],
          "throughput": [Function],
          "throughputRangeText": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "upsellAnchorText": [Function],
          "upsellAnchorUrl": [Function],
          "upsellMessage": [Function],
          "upsellMessageAriaLabel": [Function],
          "visible": [Function],
        },
        AddCollectionPane {
          "_isSynapseLinkEnabled": [Function],
          "autoPilotThroughput": [Function],
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "collectionId": [Function],
          "collectionIdTitle": [Function],
          "collectionWithThroughputInShared": [Function],
          "collectionWithThroughputInSharedTitle": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "databaseCreateNew": [Function],
          "databaseCreateNewShared": [Function],
          "databaseHasSharedOffer": [Function],
          "databaseId": [Function],
          "databaseIds": [Function],
          "dedicatedRequestUnitsUsageCost": [Function],
          "displayCollectionThroughput": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "formWarnings": [Function],
          "freeTierExceedThroughputTooltip": [Function],
          "id": "addcollectionpane",
          "isAnalyticalStorageOn": [Function],
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFixedStorageSelected": [Function],
          "isFreeTierAccount": [Function],
          "isNonTableApi": [Function],
          "isPreferredApiTable": [Function],
          "isSharedAutoPilotSelected": [Function],
          "isSynapseLinkSupported": [Function],
          "isSynapseLinkUpdating": [Function],
          "isTemplateReady": [Function],
          "isTryCosmosDBSubscription": [Function],
          "isUnlimitedStorageSelected": [Function],
          "largePartitionKey": [Function],
          "lowerCasePartitionKeyName": [Function],
          "maxCollectionsReached": [Function],
          "maxCollectionsReachedMessage": [Function],
          "maxThroughputRU": [Function],
          "minThroughputRU": [Function],
          "onMoreDetailsKeyPress": [Function],
          "partitionKey": [Function],
          "partitionKeyName": [Function],
          "partitionKeyPattern": [Function],
          "partitionKeyPlaceholder": [Function],
          "partitionKeyTitle": [Function],
          "partitionKeyVisible": [Function],
          "requestUnitsUsageCost": [Function],
          "ruToolTipText": [Function],
          "sharedAutoPilotThroughput": [Function],
          "sharedThroughputRangeText": [Function],
          "shouldCreateMongoWildcardIndex": [Function],
          "shouldUseDatabaseThroughput": [Function],
          "showAnalyticalStore": [Function],
          "showEnableSynapseLink": [Function],
          "showIndexingOptionsForSharedThroughput": [Function],
          "showUpsellMessage": [Function],
          "storage": [Function],
          "throughputDatabase": [Function],
          "throughputMultiPartition": [Function],
          "throughputRangeText": [Function],
          "throughputSinglePartition": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "ttl90DaysEnabled": [Function],
          "uniqueKeys": [Function],
          "uniqueKeysPlaceholder": [Function],
          "uniqueKeysVisible": [Function],
          "upsellAnchorText": [Function],
          "upsellAnchorUrl": [Function],
          "upsellMessage": [Function],
          "upsellMessageAriaLabel": [Function],
          "useIndexingForSharedThroughput": [Function],
          "visible": [Function],
        },
        GraphStylingPane {
          "container": [Circular],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "graphConfigUIData": Object {
            "nodeCaptionChoice": [Function],
            "nodeColorKeyChoice": [Function],
            "nodeIconChoice": [Function],
            "nodeIconSet": [Function],
            "nodeProperties": [Function],
            "nodePropertiesWithNone": [Function],
            "showNeighborType": [Function],
          },
          "id": "graphstylingpane",
          "isExecuting": [Function],
          "isTemplateReady": [Function],
          "title": [Function],
          "visible": [Function],
        },
        CassandraAddCollectionPane {
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "createTableQuery": [Function],
          "dedicateTableThroughput": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "id": "cassandraaddcollectionpane",
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFreeTierAccount": [Function],
          "isSharedAutoPilotSelected": [Function],
          "isTemplateReady": [Function],
          "keyspaceCreateNew": [Function],
          "keyspaceHasSharedOffer": [Function],
          "keyspaceId": [Function],
          "keyspaceIds": [Function],
          "keyspaceOffers": HashMap {
            "container": Object {},
          },
          "keyspaceThroughput": [Function],
          "maxThroughputRU": [Function],
          "minThroughputRU": [Function],
          "requestUnitsUsageCostDedicated": [Function],
          "requestUnitsUsageCostShared": [Function],
          "ruToolTipText": [Function],
          "selectedAutoPilotThroughput": [Function],
          "sharedAutoPilotThroughput": [Function],
          "sharedThroughputRangeText": [Function],
          "sharedThroughputSpendAck": [Function],
          "sharedThroughputSpendAckText": [Function],
          "sharedThroughputSpendAckVisible": [Function],
          "tableId": [Function],
          "throughput": [Function],
          "throughputRangeText": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "userTableQuery": [Function],
          "visible": [Function],
        },
        StringInputPane {
          "container": [Circular],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "id": "stringinputpane",
          "inputLabel": [Function],
          "isExecuting": [Function],
          "isTemplateReady": [Function],
          "stringInput": [Function],
          "submitButtonLabel": [Function],
          "title": [Function],
          "visible": [Function],
        },
      ],
      "_refreshSparkEnabledStateForAccount": [Function],
      "_resetNotebookWorkspace": [Function],
      "addCollectionPane": AddCollectionPane {
        "_isSynapseLinkEnabled": [Function],
        "autoPilotThroughput": [Function],
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "collectionId": [Function],
        "collectionIdTitle": [Function],
        "collectionWithThroughputInShared": [Function],
        "collectionWithThroughputInSharedTitle": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "databaseCreateNew": [Function],
        "databaseCreateNewShared": [Function],
        "databaseHasSharedOffer": [Function],
        "databaseId": [Function],
        "databaseIds": [Function],
        "dedicatedRequestUnitsUsageCost": [Function],
        "displayCollectionThroughput": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "formWarnings": [Function],
        "freeTierExceedThroughputTooltip": [Function],
        "id": "addcollectionpane",
        "isAnalyticalStorageOn": [Function],
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFixedStorageSelected": [Function],
        "isFreeTierAccount": [Function],
        "isNonTableApi": [Function],
        "isPreferredApiTable": [Function],
        "isSharedAutoPilotSelected": [Function],
        "isSynapseLinkSupported": [Function],
        "isSynapseLinkUpdating": [Function],
        "isTemplateReady": [Function],
        "isTryCosmosDBSubscription": [Function],
        "isUnlimitedStorageSelected": [Function],
        "largePartitionKey": [Function],
        "lowerCasePartitionKeyName": [Function],
        "maxCollectionsReached": [Function],
        "maxCollectionsReachedMessage": [Function],
        "maxThroughputRU": [Function],
        "minThroughputRU": [Function],
        "onMoreDetailsKeyPress": [Function],
        "partitionKey": [Function],
        "partitionKeyName": [Function],
        "partitionKeyPattern": [Function],
        "partitionKeyPlaceholder": [Function],
        "partitionKeyTitle": [Function],
        "partitionKeyVisible": [Function],
        "requestUnitsUsageCost": [Function],
        "ruToolTipText": [Function],
        "sharedAutoPilotThroughput": [Function],
        "sharedThroughputRangeText": [Function],
        "shouldCreateMongoWildcardIndex": [Function],
        "shouldUseDatabaseThroughput": [Function],
        "showAnalyticalStore": [Function],
        "showEnableSynapseLink": [Function],
        "showIndexingOptionsForSharedThroughput": [Function],
        "showUpsellMessage": [Function],
        "storage": [Function],
        "throughputDatabase": [Function],
        "throughputMultiPartition": [Function],
        "throughputRangeText": [Function],
        "throughputSinglePartition": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "ttl90DaysEnabled": [Function],
        "uniqueKeys": [Function],
        "uniqueKeysPlaceholder": [Function],
        "uniqueKeysVisible": [Function],
        "upsellAnchorText": [Function],
        "upsellAnchorUrl": [Function],
        "upsellMessage": [Function],
        "upsellMessageAriaLabel": [Function],
        "useIndexingForSharedThroughput": [Function],
        "visible": [Function],
      },
      "addCollectionText": [Function],
      "addDatabasePane": AddDatabasePane {
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "databaseCreateNewShared": [Function],
        "databaseId": [Function],
        "databaseIdLabel": [Function],
        "databaseIdPlaceHolder": [Function],
        "databaseIdTooltipText": [Function],
        "databaseLevelThroughputTooltipText": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "freeTierExceedThroughputTooltip": [Function],
        "id": "adddatabasepane",
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFreeTierAccount": [Function],
        "isTemplateReady": [Function],
        "maxAutoPilotThroughputSet": [Function],
        "maxThroughputRU": [Function],
        "maxThroughputRUText": [Function],
        "minThroughputRU": [Function],
        "onMoreDetailsKeyPress": [Function],
        "requestUnitsUsageCost": [Function],
        "ruToolTipText": [Function],
        "showUpsellMessage": [Function],
        "throughput": [Function],
        "throughputRangeText": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "upsellAnchorText": [Function],
        "upsellAnchorUrl": [Function],
        "upsellMessage": [Function],
        "upsellMessageAriaLabel": [Function],
        "visible": [Function],
      },
      "addDatabaseText": [Function],
      "arcadiaToken": [Function],
      "canExceedMaximumValue": [Function],
      "canSaveQueries": [Function],
      "cassandraAddCollectionPane": CassandraAddCollectionPane {
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "createTableQuery": [Function],
        "dedicateTableThroughput": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "id": "cassandraaddcollectionpane",
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFreeTierAccount": [Function],
        "isSharedAutoPilotSelected": [Function],
        "isTemplateReady": [Function],
        "keyspaceCreateNew": [Function],
        "keyspaceHasSharedOffer": [Function],
        "keyspaceId": [Function],
        "keyspaceIds": [Function],
        "keyspaceOffers": HashMap {
          "container": Object {},
        },
        "keyspaceThroughput": [Function],
        "maxThroughputRU": [Function],
        "minThroughputRU": [Function],
        "requestUnitsUsageCostDedicated": [Function],
        "requestUnitsUsageCostShared": [Function],
        "ruToolTipText": [Function],
        "selectedAutoPilotThroughput": [Function],
        "sharedAutoPilotThroughput": [Function],
        "sharedThroughputRangeText": [Function],
        "sharedThroughputSpendAck": [Function],
        "sharedThroughputSpendAckText": [Function],
        "sharedThroughputSpendAckVisible": [Function],
        "tableId": [Function],
        "throughput": [Function],
        "throughputRangeText": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "userTableQuery": [Function],
        "visible": [Function],
      },
      "clickHostedAccountSwitch": [Function],
      "clickHostedDirectorySwitch": [Function],
      "closeDialog": undefined,
      "closeSidePanel": undefined,
      "collapsedResourceTreeWidth": 36,
      "collectionCreationDefaults": Object {
        "storage": "100",
        "throughput": Object {
          "fixed": 400,
          "shared": 400,
          "unlimited": 400,
          "unlimitedmax": 1000000,
          "unlimitedmin": 400,
        },
      },
      "collectionTitle": [Function],
      "collectionTreeNodeAltText": [Function],
      "commandBarComponentAdapter": CommandBarComponentAdapter {
        "container": [Circular],
        "isNotebookTabActive": [Function],
        "parameters": [Function],
        "tabsButtons": Array [],
      },
      "databaseAccount": [Function],
      "databases": [Function],
      "defaultExperience": [Function],
      "deleteCollectionText": [Function],
      "deleteDatabaseText": [Function],
      "graphStylingPane": GraphStylingPane {
        "container": [Circular],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "graphConfigUIData": Object {
          "nodeCaptionChoice": [Function],
          "nodeColorKeyChoice": [Function],
          "nodeIconChoice": [Function],
          "nodeIconSet": [Function],
          "nodeProperties": [Function],
          "nodePropertiesWithNone": [Function],
          "showNeighborType": [Function],
        },
        "id": "graphstylingpane",
        "isExecuting": [Function],
        "isTemplateReady": [Function],
        "title": [Function],
        "visible": [Function],
      },
      "hasStorageAnalyticsAfecFeature": [Function],
      "isAccountReady": [Function],
      "isAutoscaleDefaultEnabled": [Function],
      "isEnableMongoCapabilityPresent": [Function],
      "isFixedCollectionWithSharedThroughputSupported": [Function],
      "isGitHubPaneEnabled": [Function],
      "isHostedDataExplorerEnabled": [Function],
      "isLeftPaneExpanded": [Function],
      "isMongoIndexingEnabled": [Function],
      "isNotebookEnabled": [Function],
      "isNotebooksEnabledForAccount": [Function],
      "isPublishNotebookPaneEnabled": [Function],
      "isResourceTokenCollectionNodeSelected": [Function],
      "isRightPanelV2Enabled": [Function],
      "isSchemaEnabled": [Function],
      "isServerlessEnabled": [Function],
      "isSparkEnabled": [Function],
      "isSparkEnabledForAccount": [Function],
      "isSynapseLinkUpdating": [Function],
      "isTabsContentExpanded": [Function],
      "memoryUsageInfo": [Function],
      "notebookBasePath": [Function],
      "notebookServerInfo": [Function],
      "onRefreshDatabasesKeyPress": [Function],
      "onRefreshResourcesClick": [Function],
      "onSwitchToConnectionString": [Function],
      "openDialog": undefined,
      "openSidePanel": undefined,
      "provideFeedbackEmail": [Function],
      "queriesClient": QueriesClient {
        "container": [Circular],
      },
      "refreshDatabaseAccount": [Function],
      "refreshNotebookList": [Function],
      "refreshTreeTitle": [Function],
      "resourceTokenCollection": [Function],
      "resourceTokenCollectionId": [Function],
      "resourceTokenDatabaseId": [Function],
      "resourceTokenPartitionKey": [Function],
      "resourceTree": ResourceTreeAdapter {
        "container": [Circular],
        "copyNotebook": [Function],
        "databaseCollectionIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "koSubsCollectionIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "koSubsDatabaseIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "parameters": [Function],
      },
      "resourceTreeForResourceToken": ResourceTreeAdapterForResourceToken {
        "container": [Circular],
        "parameters": [Function],
      },
      "selectedDatabaseId": [Function],
      "selectedNode": [Function],
      "setInProgressConsoleDataIdToBeDeleted": undefined,
      "setIsNotificationConsoleExpanded": undefined,
      "setNotificationConsoleData": undefined,
      "signInAad": [Function],
      "sparkClusterConnectionInfo": [Function],
      "splitter": Splitter {
        "bounds": Object {
          "max": 400,
          "min": 240,
        },
        "direction": "vertical",
        "isCollapsed": [Function],
        "leftSideId": "resourcetree",
        "onResizeStart": [Function],
        "onResizeStop": [Function],
        "splitterId": "h_splitter1",
      },
      "stringInputPane": StringInputPane {
        "container": [Circular],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "id": "stringinputpane",
        "inputLabel": [Function],
        "isExecuting": [Function],
        "isTemplateReady": [Function],
        "stringInput": [Function],
        "submitButtonLabel": [Function],
        "title": [Function],
        "visible": [Function],
      },
      "tabsManager": TabsManager {
        "activeTab": [Function],
        "openedTabs": [Function],
      },
      "toggleLeftPaneExpandedKeyPress": [Function],
    }
  }
  formError=""
  formErrorDetail=""
  id="settingspane"
  isExecuting={false}
  onClose={[Function]}
  onSubmit={[Function]}
  submitButtonText="Apply"
  title="Setting"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart pageOptionsPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Page options
          <Tooltip>
            Choose Custom to specify a fixed amount of query results to show, or choose Unlimited to show as many query results per page.
          </Tooltip>
        </div>
        <StyledChoiceGroupBase
          onChange={[Function]}
          options={
            Array [
              Object {
                "key": "custom",
                "text": "Custom",
              },
              Object {
                "key": "unlimited",
                "text": "Unlimited",
              },
            ]
          }
          selectedKey="unlimited"
        />
      </div>
      <div
        className="tabs settingsSectionPart"
      />
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable cross-partition query
          <Tooltip>
            Send more than one request while executing a query. More than one request is necessary if the query is not scoped to single partition key value.
          </Tooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable cross partition query"
          checked={true}
          className="padding"
          onChange={[Function]}
          styles={
            Object {
              "label": Object {
                "padding": 0,
              },
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Max degree of parallelism
          <Tooltip>
            Gets or sets the number of concurrent operations run client side during parallel query execution. A positive property value limits the number of concurrent operations to the set value. If it is set to less than 0, the system automatically decides the number of concurrent operations to run.
          </Tooltip>
        </div>
        <CustomizedSpinButton
          ariaLabel="Max degree of parallelism"
          className="textfontclr"
          decrementButtonIcon={
            Object {
              "iconName": "ChevronDownSmall",
            }
          }
          disabled={false}
          id="max-degree"
          incrementButtonIcon={
            Object {
              "iconName": "ChevronUpSmall",
            }
          }
          label=""
          labelPosition={2}
          max={100}
          min={-1}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          role="textbox"
          step={1}
          tabIndex={0}
          value="6"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</GenericRightPaneComponent>
`;

exports[`Settings Pane should render Gremlin properly 1`] = `
<GenericRightPaneComponent
  container={
    Explorer {
      "_closeModalDialog": [Function],
      "_closeSynapseLinkModalDialog": [Function],
      "_isAfecFeatureRegistered": [Function],
      "_isInitializingNotebooks": false,
      "_panes": Array [
        AddDatabasePane {
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "databaseCreateNewShared": [Function],
          "databaseId": [Function],
          "databaseIdLabel": [Function],
          "databaseIdPlaceHolder": [Function],
          "databaseIdTooltipText": [Function],
          "databaseLevelThroughputTooltipText": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "freeTierExceedThroughputTooltip": [Function],
          "id": "adddatabasepane",
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFreeTierAccount": [Function],
          "isTemplateReady": [Function],
          "maxAutoPilotThroughputSet": [Function],
          "maxThroughputRU": [Function],
          "maxThroughputRUText": [Function],
          "minThroughputRU": [Function],
          "onMoreDetailsKeyPress": [Function],
          "requestUnitsUsageCost": [Function],
          "ruToolTipText": [Function],
          "showUpsellMessage": [Function],
          "throughput": [Function],
          "throughputRangeText": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "upsellAnchorText": [Function],
          "upsellAnchorUrl": [Function],
          "upsellMessage": [Function],
          "upsellMessageAriaLabel": [Function],
          "visible": [Function],
        },
        AddCollectionPane {
          "_isSynapseLinkEnabled": [Function],
          "autoPilotThroughput": [Function],
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "collectionId": [Function],
          "collectionIdTitle": [Function],
          "collectionWithThroughputInShared": [Function],
          "collectionWithThroughputInSharedTitle": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "databaseCreateNew": [Function],
          "databaseCreateNewShared": [Function],
          "databaseHasSharedOffer": [Function],
          "databaseId": [Function],
          "databaseIds": [Function],
          "dedicatedRequestUnitsUsageCost": [Function],
          "displayCollectionThroughput": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "formWarnings": [Function],
          "freeTierExceedThroughputTooltip": [Function],
          "id": "addcollectionpane",
          "isAnalyticalStorageOn": [Function],
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFixedStorageSelected": [Function],
          "isFreeTierAccount": [Function],
          "isNonTableApi": [Function],
          "isPreferredApiTable": [Function],
          "isSharedAutoPilotSelected": [Function],
          "isSynapseLinkSupported": [Function],
          "isSynapseLinkUpdating": [Function],
          "isTemplateReady": [Function],
          "isTryCosmosDBSubscription": [Function],
          "isUnlimitedStorageSelected": [Function],
          "largePartitionKey": [Function],
          "lowerCasePartitionKeyName": [Function],
          "maxCollectionsReached": [Function],
          "maxCollectionsReachedMessage": [Function],
          "maxThroughputRU": [Function],
          "minThroughputRU": [Function],
          "onMoreDetailsKeyPress": [Function],
          "partitionKey": [Function],
          "partitionKeyName": [Function],
          "partitionKeyPattern": [Function],
          "partitionKeyPlaceholder": [Function],
          "partitionKeyTitle": [Function],
          "partitionKeyVisible": [Function],
          "requestUnitsUsageCost": [Function],
          "ruToolTipText": [Function],
          "sharedAutoPilotThroughput": [Function],
          "sharedThroughputRangeText": [Function],
          "shouldCreateMongoWildcardIndex": [Function],
          "shouldUseDatabaseThroughput": [Function],
          "showAnalyticalStore": [Function],
          "showEnableSynapseLink": [Function],
          "showIndexingOptionsForSharedThroughput": [Function],
          "showUpsellMessage": [Function],
          "storage": [Function],
          "throughputDatabase": [Function],
          "throughputMultiPartition": [Function],
          "throughputRangeText": [Function],
          "throughputSinglePartition": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "ttl90DaysEnabled": [Function],
          "uniqueKeys": [Function],
          "uniqueKeysPlaceholder": [Function],
          "uniqueKeysVisible": [Function],
          "upsellAnchorText": [Function],
          "upsellAnchorUrl": [Function],
          "upsellMessage": [Function],
          "upsellMessageAriaLabel": [Function],
          "useIndexingForSharedThroughput": [Function],
          "visible": [Function],
        },
        GraphStylingPane {
          "container": [Circular],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "graphConfigUIData": Object {
            "nodeCaptionChoice": [Function],
            "nodeColorKeyChoice": [Function],
            "nodeIconChoice": [Function],
            "nodeIconSet": [Function],
            "nodeProperties": [Function],
            "nodePropertiesWithNone": [Function],
            "showNeighborType": [Function],
          },
          "id": "graphstylingpane",
          "isExecuting": [Function],
          "isTemplateReady": [Function],
          "title": [Function],
          "visible": [Function],
        },
        CassandraAddCollectionPane {
          "autoPilotUsageCost": [Function],
          "canConfigureThroughput": [Function],
          "canExceedMaximumValue": [Function],
          "canRequestSupport": [Function],
          "container": [Circular],
          "costsVisible": [Function],
          "createTableQuery": [Function],
          "dedicateTableThroughput": [Function],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "id": "cassandraaddcollectionpane",
          "isAutoPilotSelected": [Function],
          "isExecuting": [Function],
          "isFreeTierAccount": [Function],
          "isSharedAutoPilotSelected": [Function],
          "isTemplateReady": [Function],
          "keyspaceCreateNew": [Function],
          "keyspaceHasSharedOffer": [Function],
          "keyspaceId": [Function],
          "keyspaceIds": [Function],
          "keyspaceOffers": HashMap {
            "container": Object {},
          },
          "keyspaceThroughput": [Function],
          "maxThroughputRU": [Function],
          "minThroughputRU": [Function],
          "requestUnitsUsageCostDedicated": [Function],
          "requestUnitsUsageCostShared": [Function],
          "ruToolTipText": [Function],
          "selectedAutoPilotThroughput": [Function],
          "sharedAutoPilotThroughput": [Function],
          "sharedThroughputRangeText": [Function],
          "sharedThroughputSpendAck": [Function],
          "sharedThroughputSpendAckText": [Function],
          "sharedThroughputSpendAckVisible": [Function],
          "tableId": [Function],
          "throughput": [Function],
          "throughputRangeText": [Function],
          "throughputSpendAck": [Function],
          "throughputSpendAckText": [Function],
          "throughputSpendAckVisible": [Function],
          "title": [Function],
          "userTableQuery": [Function],
          "visible": [Function],
        },
        StringInputPane {
          "container": [Circular],
          "firstFieldHasFocus": [Function],
          "formErrors": [Function],
          "formErrorsDetails": [Function],
          "id": "stringinputpane",
          "inputLabel": [Function],
          "isExecuting": [Function],
          "isTemplateReady": [Function],
          "stringInput": [Function],
          "submitButtonLabel": [Function],
          "title": [Function],
          "visible": [Function],
        },
      ],
      "_refreshSparkEnabledStateForAccount": [Function],
      "_resetNotebookWorkspace": [Function],
      "addCollectionPane": AddCollectionPane {
        "_isSynapseLinkEnabled": [Function],
        "autoPilotThroughput": [Function],
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "collectionId": [Function],
        "collectionIdTitle": [Function],
        "collectionWithThroughputInShared": [Function],
        "collectionWithThroughputInSharedTitle": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "databaseCreateNew": [Function],
        "databaseCreateNewShared": [Function],
        "databaseHasSharedOffer": [Function],
        "databaseId": [Function],
        "databaseIds": [Function],
        "dedicatedRequestUnitsUsageCost": [Function],
        "displayCollectionThroughput": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "formWarnings": [Function],
        "freeTierExceedThroughputTooltip": [Function],
        "id": "addcollectionpane",
        "isAnalyticalStorageOn": [Function],
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFixedStorageSelected": [Function],
        "isFreeTierAccount": [Function],
        "isNonTableApi": [Function],
        "isPreferredApiTable": [Function],
        "isSharedAutoPilotSelected": [Function],
        "isSynapseLinkSupported": [Function],
        "isSynapseLinkUpdating": [Function],
        "isTemplateReady": [Function],
        "isTryCosmosDBSubscription": [Function],
        "isUnlimitedStorageSelected": [Function],
        "largePartitionKey": [Function],
        "lowerCasePartitionKeyName": [Function],
        "maxCollectionsReached": [Function],
        "maxCollectionsReachedMessage": [Function],
        "maxThroughputRU": [Function],
        "minThroughputRU": [Function],
        "onMoreDetailsKeyPress": [Function],
        "partitionKey": [Function],
        "partitionKeyName": [Function],
        "partitionKeyPattern": [Function],
        "partitionKeyPlaceholder": [Function],
        "partitionKeyTitle": [Function],
        "partitionKeyVisible": [Function],
        "requestUnitsUsageCost": [Function],
        "ruToolTipText": [Function],
        "sharedAutoPilotThroughput": [Function],
        "sharedThroughputRangeText": [Function],
        "shouldCreateMongoWildcardIndex": [Function],
        "shouldUseDatabaseThroughput": [Function],
        "showAnalyticalStore": [Function],
        "showEnableSynapseLink": [Function],
        "showIndexingOptionsForSharedThroughput": [Function],
        "showUpsellMessage": [Function],
        "storage": [Function],
        "throughputDatabase": [Function],
        "throughputMultiPartition": [Function],
        "throughputRangeText": [Function],
        "throughputSinglePartition": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "ttl90DaysEnabled": [Function],
        "uniqueKeys": [Function],
        "uniqueKeysPlaceholder": [Function],
        "uniqueKeysVisible": [Function],
        "upsellAnchorText": [Function],
        "upsellAnchorUrl": [Function],
        "upsellMessage": [Function],
        "upsellMessageAriaLabel": [Function],
        "useIndexingForSharedThroughput": [Function],
        "visible": [Function],
      },
      "addCollectionText": [Function],
      "addDatabasePane": AddDatabasePane {
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "databaseCreateNewShared": [Function],
        "databaseId": [Function],
        "databaseIdLabel": [Function],
        "databaseIdPlaceHolder": [Function],
        "databaseIdTooltipText": [Function],
        "databaseLevelThroughputTooltipText": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "freeTierExceedThroughputTooltip": [Function],
        "id": "adddatabasepane",
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFreeTierAccount": [Function],
        "isTemplateReady": [Function],
        "maxAutoPilotThroughputSet": [Function],
        "maxThroughputRU": [Function],
        "maxThroughputRUText": [Function],
        "minThroughputRU": [Function],
        "onMoreDetailsKeyPress": [Function],
        "requestUnitsUsageCost": [Function],
        "ruToolTipText": [Function],
        "showUpsellMessage": [Function],
        "throughput": [Function],
        "throughputRangeText": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "upsellAnchorText": [Function],
        "upsellAnchorUrl": [Function],
        "upsellMessage": [Function],
        "upsellMessageAriaLabel": [Function],
        "visible": [Function],
      },
      "addDatabaseText": [Function],
      "arcadiaToken": [Function],
      "canExceedMaximumValue": [Function],
      "canSaveQueries": [Function],
      "cassandraAddCollectionPane": CassandraAddCollectionPane {
        "autoPilotUsageCost": [Function],
        "canConfigureThroughput": [Function],
        "canExceedMaximumValue": [Function],
        "canRequestSupport": [Function],
        "container": [Circular],
        "costsVisible": [Function],
        "createTableQuery": [Function],
        "dedicateTableThroughput": [Function],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "id": "cassandraaddcollectionpane",
        "isAutoPilotSelected": [Function],
        "isExecuting": [Function],
        "isFreeTierAccount": [Function],
        "isSharedAutoPilotSelected": [Function],
        "isTemplateReady": [Function],
        "keyspaceCreateNew": [Function],
        "keyspaceHasSharedOffer": [Function],
        "keyspaceId": [Function],
        "keyspaceIds": [Function],
        "keyspaceOffers": HashMap {
          "container": Object {},
        },
        "keyspaceThroughput": [Function],
        "maxThroughputRU": [Function],
        "minThroughputRU": [Function],
        "requestUnitsUsageCostDedicated": [Function],
        "requestUnitsUsageCostShared": [Function],
        "ruToolTipText": [Function],
        "selectedAutoPilotThroughput": [Function],
        "sharedAutoPilotThroughput": [Function],
        "sharedThroughputRangeText": [Function],
        "sharedThroughputSpendAck": [Function],
        "sharedThroughputSpendAckText": [Function],
        "sharedThroughputSpendAckVisible": [Function],
        "tableId": [Function],
        "throughput": [Function],
        "throughputRangeText": [Function],
        "throughputSpendAck": [Function],
        "throughputSpendAckText": [Function],
        "throughputSpendAckVisible": [Function],
        "title": [Function],
        "userTableQuery": [Function],
        "visible": [Function],
      },
      "clickHostedAccountSwitch": [Function],
      "clickHostedDirectorySwitch": [Function],
      "closeDialog": undefined,
      "closeSidePanel": undefined,
      "collapsedResourceTreeWidth": 36,
      "collectionCreationDefaults": Object {
        "storage": "100",
        "throughput": Object {
          "fixed": 400,
          "shared": 400,
          "unlimited": 400,
          "unlimitedmax": 1000000,
          "unlimitedmin": 400,
        },
      },
      "collectionTitle": [Function],
      "collectionTreeNodeAltText": [Function],
      "commandBarComponentAdapter": CommandBarComponentAdapter {
        "container": [Circular],
        "isNotebookTabActive": [Function],
        "parameters": [Function],
        "tabsButtons": Array [],
      },
      "databaseAccount": [Function],
      "databases": [Function],
      "defaultExperience": [Function],
      "deleteCollectionText": [Function],
      "deleteDatabaseText": [Function],
      "graphStylingPane": GraphStylingPane {
        "container": [Circular],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "graphConfigUIData": Object {
          "nodeCaptionChoice": [Function],
          "nodeColorKeyChoice": [Function],
          "nodeIconChoice": [Function],
          "nodeIconSet": [Function],
          "nodeProperties": [Function],
          "nodePropertiesWithNone": [Function],
          "showNeighborType": [Function],
        },
        "id": "graphstylingpane",
        "isExecuting": [Function],
        "isTemplateReady": [Function],
        "title": [Function],
        "visible": [Function],
      },
      "hasStorageAnalyticsAfecFeature": [Function],
      "isAccountReady": [Function],
      "isAutoscaleDefaultEnabled": [Function],
      "isEnableMongoCapabilityPresent": [Function],
      "isFixedCollectionWithSharedThroughputSupported": [Function],
      "isGitHubPaneEnabled": [Function],
      "isHostedDataExplorerEnabled": [Function],
      "isLeftPaneExpanded": [Function],
      "isMongoIndexingEnabled": [Function],
      "isNotebookEnabled": [Function],
      "isNotebooksEnabledForAccount": [Function],
      "isPublishNotebookPaneEnabled": [Function],
      "isResourceTokenCollectionNodeSelected": [Function],
      "isRightPanelV2Enabled": [Function],
      "isSchemaEnabled": [Function],
      "isServerlessEnabled": [Function],
      "isSparkEnabled": [Function],
      "isSparkEnabledForAccount": [Function],
      "isSynapseLinkUpdating": [Function],
      "isTabsContentExpanded": [Function],
      "memoryUsageInfo": [Function],
      "notebookBasePath": [Function],
      "notebookServerInfo": [Function],
      "onRefreshDatabasesKeyPress": [Function],
      "onRefreshResourcesClick": [Function],
      "onSwitchToConnectionString": [Function],
      "openDialog": undefined,
      "openSidePanel": undefined,
      "provideFeedbackEmail": [Function],
      "queriesClient": QueriesClient {
        "container": [Circular],
      },
      "refreshDatabaseAccount": [Function],
      "refreshNotebookList": [Function],
      "refreshTreeTitle": [Function],
      "resourceTokenCollection": [Function],
      "resourceTokenCollectionId": [Function],
      "resourceTokenDatabaseId": [Function],
      "resourceTokenPartitionKey": [Function],
      "resourceTree": ResourceTreeAdapter {
        "container": [Circular],
        "copyNotebook": [Function],
        "databaseCollectionIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "koSubsCollectionIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "koSubsDatabaseIdMap": ArrayHashMap {
          "store": HashMap {
            "container": Object {},
          },
        },
        "parameters": [Function],
      },
      "resourceTreeForResourceToken": ResourceTreeAdapterForResourceToken {
        "container": [Circular],
        "parameters": [Function],
      },
      "selectedDatabaseId": [Function],
      "selectedNode": [Function],
      "setInProgressConsoleDataIdToBeDeleted": undefined,
      "setIsNotificationConsoleExpanded": undefined,
      "setNotificationConsoleData": undefined,
      "signInAad": [Function],
      "sparkClusterConnectionInfo": [Function],
      "splitter": Splitter {
        "bounds": Object {
          "max": 400,
          "min": 240,
        },
        "direction": "vertical",
        "isCollapsed": [Function],
        "leftSideId": "resourcetree",
        "onResizeStart": [Function],
        "onResizeStop": [Function],
        "splitterId": "h_splitter1",
      },
      "stringInputPane": StringInputPane {
        "container": [Circular],
        "firstFieldHasFocus": [Function],
        "formErrors": [Function],
        "formErrorsDetails": [Function],
        "id": "stringinputpane",
        "inputLabel": [Function],
        "isExecuting": [Function],
        "isTemplateReady": [Function],
        "stringInput": [Function],
        "submitButtonLabel": [Function],
        "title": [Function],
        "visible": [Function],
      },
      "tabsManager": TabsManager {
        "activeTab": [Function],
        "openedTabs": [Function],
      },
      "toggleLeftPaneExpandedKeyPress": [Function],
    }
  }
  formError=""
  formErrorDetail=""
  id="settingspane"
  isExecuting={false}
  onClose={[Function]}
  onSubmit={[Function]}
  submitButtonText="Apply"
  title="Setting"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Display Gremlin query results as: 
          <Tooltip>
            Select Graph to automatically visualize the query results as a Graph or JSON to display the results as JSON.
          </Tooltip>
        </div>
        <StyledChoiceGroupBase
          aria-label="Graph Auto-visualization"
          onChange={[Function]}
          options={
            Array [
              Object {
                "key": "false",
                "text": "Graph",
              },
              Object {
                "key": "true",
                "text": "JSON",
              },
            ]
          }
          selectedKey="false"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</GenericRightPaneComponent>
`;
